body text align center fix rodmap.sh

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   background-color: #2b2628;
   color: White;
   font-size: large;
+  text-align: center;
 }
 
 h1 {
@@ -62,14 +63,13 @@ a:hover {
 }
 
 #roadmap {
-  display: block;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 6px;
   border: 2px solid #374151;
   border-bottom: 0;
   box-shadow: #374151 0 0 7px;
-  object-fit: fill;
   background-color: #374151;
   margin-bottom: 50px;
 }
